test_scripts/errors/missing_return_semicolon.shm
fn test() {
    return 5 return 6
}
test();
